@@ -2,7 +2,7 @@ Package: plutils
 Type: Package
 Title: Tools for plotting with style 
 Version: 0.3.0
-Date: 2013-11-01
+Date: 2013-11-02
 Author: Ute Hahn
 Maintainer: Ute Hahn <ute@imf.au.dk>
 Description: Provides utilities for handling plot and graphic parameters, 
