@@ -12,7 +12,6 @@ export(ploptions)
 export(rangexy)
 export(simplist)
 export(splot)
-export(summaryplot)
 export(updateJoin)
 export(updateList)
 export(updateMissing)
