@@ -77,9 +77,9 @@ retagList <- function (arglist, tagnames)
 #'@param allinone logical, if TRUE, all objects are plotted in one window.
 #'@param .plotmethod a generic function for plotting, or a character string naming
 #'a generic function. Defaults to \code{"plot"} and should usually not be changed.
-#'#'@details
-#'Only objects that belong to classes with a plot method are plotted.
-#'The plot parameters may be given as lists with the same name as the objects list.
+#'@details
+# Only objects that belong to classes with a plot method are plotted.
+#'Plot parameters may be given as lists with the same name as the objects list.
 #' Parameters in named lists are assigned to the object with same name in
 #'list \code{objects}. Plot parameters not given in a list apply to all objects.
 #'Plot parameters may also be grouped as \code{\link{simplist}}s, since \code{lplot}
@@ -110,9 +110,9 @@ lplot <- function (objects=NULL, ..., allinone = TRUE, .plotmethod = "plot")
   stopifnot(is.list(objects))
 
   # check whether objects have plot methods
-  plottingclasses <- classesWithMethod(.plotmethod)
-  canplot <- function(obj) any(class(obj) %in% plottingclasses)
-  objects <- objects[sapply(objects, canplot)]
+ # plottingclasses <- classesWithMethod(.plotmethod)
+ # canplot <- function(obj) any(class(obj) %in% plottingclasses)
+ # objects <- objects[sapply(objects, canplot)]
 
   nobjects <- length(objects)
   if (nobjects == 0) stop("nothing to plot here")
