@@ -2,6 +2,12 @@ CHANGES IN plutils VERSION 0.3.0
 
     o now with package options, accessible via function "ploptions"
 
+    o simplification and user's own risk: splot does no longer check whether the 
+      objects to plot have a plot method
+
+    o generic function summaryplot was removed again, no longer necessary due
+      to simplifications in splot and lplot1
+
 CHANGES IN plutils VERSION 0.2.3
   
     o package has been renamed!
